# ShieldMCP

./: .gitignore  HANDOFF.md  README.md  SYSTEM_DOCUMENTATION.md  pyproject.toml
configs/: default.yaml
eval/: run_evaluation.py
eval/adversarial_servers/: __main__.py  base.py  cross_tool_chain.py  indirect_prompt_injection.py  rug_pull.py  supply_chain.py  tool_poisoning.py
eval/baselines/: llm_judge_baseline.py  regex_baseline.py
eval/benchmarks/: latency_benchmark.py
eval/benign_servers/: __main__.py  base.py  servers.py
eval/expert_review/: review_tool.py
eval/harness/: runner.py
eval/results/: analyzer.py  visualizer.py
eval/results/output/: framework_eval_results.json  latency_results.json
eval/results/output_classifier/: framework_eval_results.json  latency_results.json
eval/scenarios/: attack_scenarios.py  benign_scenarios.py
examples/: live_proxy_demo.py
examples/demo/: demo_runner.py
paper/: DEMO_VIDEO_SCRIPT.md  shieldmcp.bib  shieldmcp_demo.tex
src/shieldmcp/: __init__.py  cli.py
src/shieldmcp/classifiers/: __init__.py  description_classifier.py  token_classifier.py
src/shieldmcp/core/: alerts.py  config.py  models.py  pipeline.py  registry.py
src/shieldmcp/demo/: __init__.py  scenarios.py  server.py
src/shieldmcp/demo/static/: app.css  app.js  index.html
src/shieldmcp/proxy/: __init__.py  interceptor.py  sse_proxy.py
src/shieldmcp/stage1/: description_integrity.py  semantic.py  structural.py
src/shieldmcp/stage2/: parameter_sanitizer.py
src/shieldmcp/stage3/: response_analyzer.py
tests/unit/: test_parameter_sanitizer.py  test_pipeline.py  test_registry.py  test_response_analyzer.py  test_structural.py
training/: generate_stage1_data.py  generate_stage3_data.py  train_stage1.py  train_stage3.py
