[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shieldmcp"
version = "0.1.0"
description = "Runtime security framework for Model Context Protocol deployments"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "ShieldMCP Authors"},
]
keywords = ["mcp", "security", "llm", "agent", "tool-calling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "mcp>=1.0.0",
    "jsonschema>=4.21.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "regex>=2024.4.16",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
]
eval = [
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
all = ["shieldmcp[ml,eval,dev]"]

[project.scripts]
shieldmcp = "shieldmcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"shieldmcp.demo" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
